# rio-cogeo

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  CHANGES.md  CHANGES.txt  CONTRIBUTING.md  README.md  README.rst  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml  deploy_mkdocs.yml
API/: index.html
Advanced/: index.html
CLI/: index.html
Is_it_a_COG/: index.html
contributing/: index.html
docs/: API.md  Advanced.md  CLI.md  Is_it_a_COG.md  mkdocs.yml  profile.md
docs/docs/: API.md  Advanced.md  CLI.md
docs/docs/css/: extra.css
profile/: index.html
release-notes/: index.html
rio_cogeo/: __init__.py  cogeo.py  errors.py  models.py  profiles.py  utils.py
rio_cogeo/scripts/: __init__.py  cli.py
search/: search_index.json
tests/: .test_cogeo.py.swp  __init__.py  conftest.py  test_cli.py  test_cogeo.py  test_profile.py  test_raster.py  test_utils.py  test_validate.py  test_web.py
tests/fixtures/: bad_output_vrt.tif  dataset_namespace_metadata.xml  image_171px.tif  image_2000px.tif  image_51px.tif  image_colormap.tif  image_geos.tif  image_missing_nodata.tif  image_nan.tif  image_nocolormap.tif  image_nodata.tif  image_north.tif  image_noweb.tif  image_rgb.tif  image_rgb_mask.tif  image_rgba_nodata.tif  image_tags.tif  image_web.tif  image_web_z5_z11.tif  image_webp.tif  image_with_offsets.tif  slc.tif
tests/fixtures/validate/: cog_no_offest.tif  image_COG_gdal3.1.tif  image_dec.tif  image_external.tif  image_external.tif.ovr  image_known_incompatible_ghost_headers.tif  image_no_overview.tif  image_rioCOG_gdal3.1.tif  image_sorted.tif
